--- a/Proyecto Grupo 7 Progra Avanzada/Views/Comercios/Details.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Comercios/Details.cshtml
@@ -4,74 +4,103 @@
     ViewData["Title"] = "Detalles Comercio";
 }
 
-<h1>Detalles del Comercio</h1>
+<div class="card shadow p-4 mt-4">
+    <div class="card-header bg-info text-white text-center">
+        <h1 class="h3 mb-0">Detalles del Comercio</h1>
+        <h4 class="mb-0">@Model.Nombre</h4>
+    </div>
+    <div class="card-body">
+        <dl class="row">
 
-<div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Identificacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Identificacion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoIdentificacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoIdentificacion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoDeComercio)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoDeComercio)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CorreoElectronico)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CorreoElectronico)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Direccion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Direccion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeRegistro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeRegistro)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeModificacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeModificacion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdComercio">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+            <dt class="col-sm-4 text-dark">
+                @Html.DisplayNameFor(model => model.Identificacion)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Identificacion)
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                Tipo de Identificación
+            </dt>
+            <dd class="col-sm-8">
+                @(Model.TipoIdentificacion == 1 ? "Física (Cédula)" : "Jurídica (Cédula Jurídica)")
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                @Html.DisplayNameFor(model => model.Nombre)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Nombre)
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                Tipo de Comercio
+            </dt>
+            <dd class="col-sm-8">
+                @{
+                    string tipoComercioDetalles = Model.TipoDeComercio switch
+                    {
+                        1 => "Restaurantes",
+                        2 => "Supermercados",
+                        3 => "Ferreterías",
+                        4 => "Otros",
+                        _ => "No Definido"
+                    };
+                    @tipoComercioDetalles
+                }
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                @Html.DisplayNameFor(model => model.Telefono)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Telefono)
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                @Html.DisplayNameFor(model => model.CorreoElectronico)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.CorreoElectronico)
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                @Html.DisplayNameFor(model => model.Direccion)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Direccion)
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                @Html.DisplayNameFor(model => model.FechaDeRegistro)
+            </dt>
+            <dd class="col-sm-8">
+                @Model.FechaDeRegistro.ToString("dd/MM/yyyy HH:mm")
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                @Html.DisplayNameFor(model => model.FechaDeModificacion)
+            </dt>
+            <dd class="col-sm-8">
+                @(Model.FechaDeModificacion.HasValue? Model.FechaDeModificacion.Value.ToString("dd/MM/yyyy HH:mm") : "N/A")
+            </dd>
+
+            <dt class="col-sm-4 text-dark">
+                @Html.DisplayNameFor(model => model.Estado)
+            </dt>
+            <dd class="col-sm-8">
+                @(Model.Estado
+                                ? Html.Raw("<span class='badge bg-success'><i class='fas fa-check-circle'></i> Activo</span>")
+                                : Html.Raw("<span class='badge bg-danger'><i class='fas fa-times-circle'></i> Inactivo</span>"))
+            </dd>
+        </dl>
+    </div>
+    <div class="card-footer text-center">
+        <a asp-action="Edit" asp-route-id="@Model?.IdComercio" class="btn btn-warning btn-lg mx-2 text-dark">
+            <i class="fas fa-edit"></i> Editar
+        </a>
+        <a asp-action="Index" class="btn btn-secondary btn-lg mx-2">
+            <i class="fas fa-arrow-alt-circle-left"></i> Volver a la Lista
+        </a>
+    </div>
 </div>
