--- a/Proyecto Grupo 7 Progra Avanzada/Views/Comercios/Index.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Comercios/Index.cshtml
@@ -1,28 +1,28 @@
 ﻿@model IEnumerable<Proyecto_Grupo_7_Progra_Avanzada.Models.Comercio>
 
 @{
-    ViewData["Title"] = "Inicio";
+    ViewData["Title"] = "Comercios Registrados";
 }
 
 <h1>Comercios Registrados</h1>
 
 <p>
-    <a asp-action="Create">Crar un Nuevo Comercio</a>
+    <a asp-action="Create" class="btn btn-primary">Crear un Nuevo Comercio</a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Identificacion)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TipoIdentificacion)
+                Tipo de Identificación
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TipoDeComercio)
+                Tipo de Comercio
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Telefono)
@@ -31,59 +31,54 @@
                 @Html.DisplayNameFor(model => model.CorreoElectronico)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Direccion)
+                Estado
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaDeRegistro)
+                Acciones
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaDeModificacion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Identificacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TipoIdentificacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TipoDeComercio)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Telefono)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CorreoElectronico)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Direccion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaDeRegistro)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaDeModificacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdComercio">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdComercio">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdComercio">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Identificacion)
+                </td>
+                <td>
+                    @(item.TipoIdentificacion == 1 ? "Física" : "Jurídica")
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+                <td>
+                    @{
+                        string tipoComercio = item.TipoDeComercio switch
+                        {
+                            1 => "Restaurantes",
+                            2 => "Supermercados",
+                            3 => "Ferreterías",
+                            4 => "Otros",
+                            _ => "No Definido"
+                        };
+                        @tipoComercio
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Telefono)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CorreoElectronico)
+                </td>
+                <td>
+                    @(item.Estado ? "Activo" : "Inactivo")
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.IdComercio" class="btn btn-sm btn-warning">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.IdComercio" class="btn btn-sm btn-info">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdComercio" class="btn btn-sm btn-secondary">Eliminar</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
