--- a/Proyecto Grupo 7 Progra Avanzada/Views/Home/Index.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Home/Index.cshtml
@@ -1,5 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Panel de Control";
 }
 
+<div class="container-fluid mt-4">
+    <div class="row mb-4">
+        <div class="col-12">
+            <h1 class="display-4 text-primary">
+                <i></i> ¡Bienvenido al sistema!
+            </h1>
+        </div>
+    </div>
 
+</div>
