--- a/Proyecto Grupo 7 Progra Avanzada/Views/Cajas/Details.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Cajas/Details.cshtml
@@ -1,60 +1,58 @@
 ﻿@model Proyecto_Grupo_7_Progra_Avanzada.Models.Caja
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles Caja";
 }
 
-<h1>Details</h1>
+<div class="card shadow p-4 mt-4">
+    <div class="card-header bg-info text-white text-center">
+        <h1 class="h3 mb-0">Detalles de la Caja</h1>
+        <h4 class="mb-0">@Model.Nombre</h4>
+    </div>
+    <div class="card-body">
+        <dl class="row">
+            <dt class="col-sm-4 text-dark">ID de Comercio</dt>
+            <dd class="col-sm-8">@Model.IdComercio</dd>
 
-<div>
-    <h4>Caja</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdComercio)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdComercio)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descripcion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TelefonoSINPE)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TelefonoSINPE)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeRegistro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeRegistro)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeModificacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeModificacion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-    </dl>
+            <dt class="col-sm-4 text-dark">Nombre</dt>
+            <dd class="col-sm-8">@Model.Nombre</dd>
+
+            <dt class="col-sm-4 text-dark">Descripción</dt>
+            <dd class="col-sm-8">@Model.Descripcion</dd>
+
+            <dt class="col-sm-4 text-dark">Teléfono SINPE</dt>
+            <dd class="col-sm-8">@Model.TelefonoSINPE</dd>
+
+            <dt class="col-sm-4 text-dark">Fecha de Registro</dt>
+            <dd class="col-sm-8">@Model.FechaDeRegistro.ToString("dd/MM/yyyy HH:mm")</dd>
+
+            <dt class="col-sm-4 text-dark">Fecha de Modificación</dt>
+            <dd class="col-sm-8">
+                @(Model.FechaDeModificacion.HasValue
+                                ? Model.FechaDeModificacion.Value.ToString("dd/MM/yyyy HH:mm")
+                                : "N/A")
+            </dd>
+
+            <dt class="col-sm-4 text-dark">Estado</dt>
+            <dd class="col-sm-8">
+                @(Model.Estado
+                                ? Html.Raw("<span class='badge bg-success'><i class='fas fa-check-circle'></i> Activo</span>")
+                                : Html.Raw("<span class='badge bg-danger'><i class='fas fa-times-circle'></i> Inactivo</span>"))
+            </dd>
+        </dl>
+    </div>
+    <div class="card-footer text-center">
+        <a asp-action="Edit" asp-route-id="@Model?.IdCaja" class="btn btn-warning btn-lg mx-2 text-dark">
+            <i class="fas fa-edit"></i> Editar
+        </a>
+        <a asp-action="Index" class="btn btn-secondary btn-lg mx-2">
+            <i class="fas fa-arrow-alt-circle-left"></i> Volver a la Lista
+        </a>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdCaja">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
