--- a/Proyecto Grupo 7 Progra Avanzada/Views/Comercios/Index.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Comercios/Index.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Crear un Nuevo Comercio</a>
+    <a asp-controller="Configuraciones" asp-action="Index" class="btn btn-info">Configuraciones de Comercio</a>
 </p>
 <table class="table table-striped table-hover">
     <thead>
