Agregar configuraciones al Navbar

--- a/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Comercios" asp-action="Index">Comercio</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Configuraciones" asp-action="Index">Configuraciones</a>
+                        </li>
                     </ul>
                 </div>
             </div>
