--- a/Proyecto Grupo 7 Progra Avanzada/Views/Sinpe/Registrar.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Sinpe/Registrar.cshtml
@@ -13,7 +13,7 @@
 <div class="card shadow p-4 mt-4">
     <div class="card-header bg-primary text-white text-center">
         <h1 class="h3 mb-0">Registrar Pago Electrónico (SINPE)</h1>
-        <p class="mb-0">Complete todos los campos para simular el pago.</p>
+        <p class="mb-0">Complete todos los campos para realizar el pago.</p>
     </div>
     <div class="card-body">
 
