Implementaciones de Comercio

--- a/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Sinpe" asp-action="Registrar">Registrar SINPE</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Configuraciones" asp-action="Index">Configuraciones</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
